--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.21.1
   firebase_auth: ^3.7.0
   cloud_firestore: ^3.4.6
+  firebase_analytics: ^9.3.3
 
 dev_dependencies:
   flutter_test:
