--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.7.0
   cloud_firestore: ^3.4.6
   firebase_analytics: ^9.3.3
+  firebase_database: ^9.1.3
 
 dev_dependencies:
   flutter_test:
